src/routes/_layout/global.scss
$font-path: '/static/fonts/Atkinson/';

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Regular.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Regular.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Regular.ttf');
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Italic.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Italic.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Italic.ttf');
  font-style: italic;
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Bold.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Bold.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Bold.ttf');
  font-weight: bold;
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-BoldItalic.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-BoldItalic.woff'),
    url($font-path + 'Atkinson-Hyperlegible-BoldItalic.ttf');
  font-weight: bold;
  font-style: italic;
}

:root {
  --spacing-xs: 8px;
  --spacing: 24px;
  --spacing-s: 12px;
  --spacing-m: 36px;

  --default-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
  --body-font: Atkinson, 'Open Sans', var(--default-fonts);
  --header-font: rigid-square, 'Fira Code', monospace, var(--default-fonts);

  --body-color-dark: #311b00;
  --body-color: #5f4b32;
  --body-color-2: #948067;
  --bg-color: #f9f1db;
  --bg-color-2: #d9c7ab;
  --green: #24ac6c;
  --green-faded: #5fb88e;
  --section-color: var(--green);
  --purple: #7931e3;
  --red: #e46a4e;
  --red-faded: #e07c64;
  --red-dim: #e4694e71;

  --content-max-width: 1400px;
  --nav-height: 100px;
  --me-font-size: 24px;

  --nav-anim-duration: 0.8s;
}

@media (max-width: 850px) {
  :root {
    --nav-height: 60px;
  }
}

@mixin header {
  font-family: var(--header-font);
  font-weight: normal;
  font-size: 100px;
}

@mixin subheader {
  font-family: var(--body-font);
  font-weight: bold;
  font-size: 48px;
  letter-spacing: 0.03em;
}

$tablet-breakpoint: 1200px;
$mobile-breakpoint: 850px;

* {
  box-sizing: border-box;
}

html {
  font-family: var(--body-font);
  line-height: 1.4;
  font-size: var(--me-font-size);
  color: var(--body-color);
  background: var(--bg-color);
}

h1,
h2 {
  @include header;
}

h1 {
  font-weight: bold;
}

h2 {
  &.numbered {
    position: relative;

    &::before {
      counter-increment: section-number;
      content: counter(section-number);
      background: var(--bg-color-2);
      border-radius: 100%;

      position: absolute;
      top: -1.3em;
      left: -1em;
      width: 2.5em;
      height: 2.5em;
      display: flex;
      justify-content: center;
      color: var(--bg-color);
      z-index: -1;
    }
  }
}

h3 {
  @include subheader;
  margin-top: 15px;
  margin-bottom: 15px;
}

h4 {
  @include subheader;
  font-size: 36px;
  margin-bottom: 10px;
}

a,
a:visited {
  color: var(--section-color);
  text-decoration: underline dashed;
  cursor: pointer;
  transition: opacity 0.2s;
}

a:hover {
  opacity: 0.4;
}

.macintosh {
  position: relative;

  > img {
    width: 100%;
  }

  .macintosh__img-container {
    position: absolute;
    top: 11.5%;
    left: 11%;
    width: 78%;
    overflow: hidden;

    > img,
    > video {
      width: 100%;
      height: auto;
      transform-origin: bottom center;
      background: #333;
    }

    &::before {
      content: '';
      position: absolute;
      width: 100%;
      height: 2px;
      background: rgba(0, 0, 0, 0.2);
      z-index: 1;
      animation: macintosh-scan-line 4s linear infinite;
    }

    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: radial-gradient(transparent 0%, rgba(49, 25, 2, 0.2)),
        linear-gradient(transparent, rgba(0, 0, 0, 0.05)) repeat;
      background-size: 100% 100%, 100% 1%;
    }

    @keyframes macintosh-scan-line {
      from {
        top: 0%;
        opacity: 1;
      }
      to {
        top: 100%;
        opacity: 0.1;
      }
    }
  }
}

.img-link {
  --color: var(--section-color);
  text-decoration: none;

  .img-link__img-container {
    position: relative;

    > img,
    > video {
      width: 100%;
      transition: transform 0.5s;
    }
    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      bottom: 6px;
      right: 0;
      border-left: 10px solid var(--color);
      border-bottom: 10px solid var(--color);
      background: repeating-linear-gradient(
        45deg,
        var(--color) 0,
        var(--color) 25%,
        transparent 0%,
        transparent 50%
      );
      background-size: 50px 50px;
      background-position: 0 0;
      z-index: -1;
      transition: transform 0.5s;
      transform: translate(-6px, 6px);
    }
  }
  &:hover > .img-link__img-container {
    > img,
    > video {
      transform: translate(20px, -20px);
    }
    &::after {
      animation: stripe-anim 3s linear infinite;
    }
  }
}

.cta-link:hover,
.img-link:hover {
  opacity: 1;
}

.cta-link {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 3px solid var(--section-color);
  color: var(--section-color);
  @include subheader;
  font-size: inherit;
  padding: 10px;
  text-decoration: none;
  background: linear-gradient(
    90deg,
    var(--section-color) 0,
    var(--section-color) 50%,
    var(--bg-color) 50%,
    var(--bg-color) 100%
  );
  background-size: 200% 100%;
  background-position: 100% 0;
  transition: background-position 0.5s;
  margin: 0;
  margin-top: 50px;

  &::before {
    content: '';
    position: absolute;
    top: 3px;
    left: -9px;
    right: 3px;
    bottom: -9px;
    background: var(--section-color);
    z-index: -1;
    transition: transform 0.5s;
    transform-origin: left;
  }

  > svg {
    fill: var(--section-color);
    margin-left: 15px;
  }
}

.cta-link:hover,
.cta-link:focus,
.img-link:hover > .cta-link,
.img-link:focus > .cta-link {
  background-position: 0;
  color: var(--bg-color);

  &::before {
    transform: translate(6px, -3px) scaleX(0);
  }
  > svg {
    fill: var(--bg-color);
    transition: fill 0.2s;
    transition-delay: 0.3s;
  }
  &::after {
    --icon-color: var(--bg-color);
    transition: background-color 0.2s;
    transition-delay: 0.3s;
  }
}

body {
  margin: 0;
}

section {
  max-width: var(--content-max-width);
  margin: auto;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 200px;
  margin-top: 100px;

  @media (max-width: 1700px) {
    margin-right: var(--nav-height);
  }

  @media (max-width: $mobile-breakpoint) {
    --content-max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 20px;
    padding-right: 20px;

    font-size: 20px;

    h1,
    h2 {
      font-size: 64px;
      margin-top: 16px;
      margin-bottom: 16px;
    }

    h3 {
      font-size: 36px;
      margin-top: 10px;
      margin-bottom: 10px;
    }

    h4 {
      font-size: 30px;
    }
  }
}

button {
  font-size: inherit;
  background: none;
  border: none;
  font-family: var(--header-font);
  color: var(--body-color);
  cursor: pointer;

  * {
    pointer-events: none;
  }
}

[data-route] {
  counter-reset: section-number;

  &.slideOut,
  &.slideIn {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    animation-duration: var(--nav-anim-duration);
    animation-timing-function: cubic-bezier(0.17, 0.84, 0.44, 1);
  }
  &.slideIn {
    animation-name: slidePageIn;
  }
  &.slideOut {
    animation-name: slidePageOut;
  }
}

@keyframes slidePageIn {
  from {
    transform: translateY(100vh);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes slidePageOut {
  from {
    transform: translateY(0);
    opacity: 1;
  }
  to {
    transform: translateY(-100vh);
    opacity: 0;
  }
}

